--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:19.1.0'
     implementation 'de.hdodenhof:circleimageview:2.1.0'
     implementation 'com.firebaseui:firebase-ui-storage:4.1.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 
 
     implementation("com.github.bumptech.glide:glide:4.9.0") {
